# data-engineering-zoomcamp

./: .gitignore  README.md
01-docker-terraform/: README.md
01-docker-terraform/docker/: homework.ipynb  pipeline.py  pyproject.toml
01-docker-terraform/terraform/: main.tf  variables.tf
